Different methods of printing in java