@@ -19,7 +19,7 @@ public class Output {
 
         // but becuase we don't want java to print random values  we will pass it into Arrays.toString method 
 
-        Integer num = new Integer(56);
+        Integer num = Integer.valueOf(56);
         System.out.println(num.toString());
         System.out.println(num);
 
